--- a/InterviewTestPagination/app/styles/styles.css
+++ b/InterviewTestPagination/app/styles/styles.css
@@ -23,3 +23,14 @@ table tr:nth-child(odd) {
 .pagination input {
     width: 30px;
 }
+
+#loadingDiv {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+    background-color: grey;
+    opacity: .8;
+}
